2004-11-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Updated the dict.leo.org translator to work with the
	latest version of the web service, and fixed the key binding to
	invoke it.
	* tkchat.tcl: Changed the visual appearance of /nolog messages to
	be faded to 60%, and in the same font (italic by default) as
	actions.

2004-11-09  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Auto reenter conference and reconnect to server.

2004-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added bug image.

2004-11-08  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Support for nick colors in jabber mode. Fixes timestamp
	bug in MsgCB

2004-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix to permit re-loading the script. Adjustments to
	the show smilies dialog.
	
	* tkchat.tcl: Remove the Jabber HTTP polling checkbox. This can
	be uncommented if polling is ever made to work.

	* tkchat.tcl: Fix for a bug in some tile installations for the
	#1061218 patch. Should be more robust.

2004-11-08  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: More work on jabber history loading, added /(no)log
        commands and menu options to set message logging behaviour. Added 
	http(s) url RE for jabber mode.

2004-11-07  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Added jabber history loading
	* tkchat.tcl: New history format
	* tkchat.tcl: Add NOLOG tag to add(Message|Action) 
	
2004-11-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Merged in improvements for tile and winico handling
	from Donal Fellows. (Patch #1061218).
	* tkchat.tcl: Added cyclops smiley.

2004-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add jabber port setting and disable when not in use.

2004-10-16  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Jabber. Register account popup fixed for jabberd2,
	nickname conflict resolution added at room entry.
	